--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,21 @@
   box-sizing: border-box;
 }
 
+html::before {
+  content: '';
+  position: fixed;
+  top: 5rem;
+  left: 3rem;
+  width: calc(100vw - 6rem);
+  height: calc(100vh - 10rem);
+  background-color: var(--color-secondary, white);
+  z-index: 0;
+}
+
 body {
+  position: relative;
   margin: 0;
-  padding: 0;
+  padding: 2rem;
+  background-color: transparent;
+  z-index: 2;
 }
